--- a/blocks/cover/__title/cover__title.css
+++ b/blocks/cover/__title/cover__title.css
@@ -1,24 +1,24 @@
 .cover__title {
   max-width: 560px;
-  margin: 0 auto;
   font-family: 'Inter', Arial, Helvetica, sans-serif;
   font-style: normal;
   font-weight: 900;
   font-size: 72px;
-  line-height: 76px;
+  line-height: 1.1;
   text-align: center;
   color: #FFFDFD;
   position: absolute;
   left: 50%;
   top: 50%;
+  margin: 0 auto;
   transform: translate(-50%, -75%);
 }
 
-@media screen and (max-width: 760px) {
+@media screen and (max-width: 767px) {
 .cover__title {
   max-width: 288px;
   font-size: 32px;
-  line-height: 35px;
+  line-height: 1.1;
   transform: translate(-50%, -95%);
   }
 }
