--- a/blocks/footer/__copyright/footer__copyright.css
+++ b/blocks/footer/__copyright/footer__copyright.css
@@ -2,9 +2,9 @@
   margin: 0;
   font-family: 'Inter', Arial, Helvetica, sans-serif;
   font-style: normal;
-  font-weight: normal;
+  font-weight: 400;
   font-size: 14px;
-  line-height: 16px;
+  line-height: 1.1;
   text-align: right;
   color: #FFFFFF;
 }
@@ -12,7 +12,7 @@
 @media screen and (max-width: 760px) {
 .footer__copyright {
   font-size: 14px;
-  line-height: 14px;
+  line-height: 1;
   margin-top: 48px;
   }
 }
