--- a/blocks/footer/__link/footer__link.css
+++ b/blocks/footer/__link/footer__link.css
@@ -3,19 +3,20 @@
   text-decoration: none;
   font-family: 'Inter', Arial, Helvetica, sans-serif;
   font-style: normal;
-  font-weight: normal;
+  font-weight: 400;
   font-size: 16px;
-  line-height: 18px;
+  line-height: 1.1;
   color: #FFFFFF;
 }
 
 .footer__link:hover {
   opacity: 0.8;
+  transition: opacity .5s linear;
 }
 
 @media screen and (max-width: 760px) {
 .footer__link {
   font-size: 24px;
-  line-height: 24px;
+  line-height: 1;
   }
 }
