--- a/blocks/header/__lang-link/header__lang-link.css
+++ b/blocks/header/__lang-link/header__lang-link.css
@@ -1,9 +1,9 @@
 .header__lang-link {
   font-family: 'Inter', Arial, Helvetica, sans-serif;;
   font-style: normal;
-  font-weight: normal;
+  font-weight: 400;
   font-size: 24px;
-  line-height: 28px;
+  line-height: 1;
   color: #FFFFFF;
   text-decoration: none;
 }
@@ -12,9 +12,9 @@
   margin-left: 18px;
 }
 
-@media screen and (max-width: 760px) {
+@media screen and (max-width: 767px) {
 .header__lang-link {
   font-size: 18px;
-  line-height: 24px;
+  line-height: 1.3;
   }
  }
