--- a/blocks/intro/__list-bold-font/intro__list-bold-font.css
+++ b/blocks/intro/__list-bold-font/intro__list-bold-font.css
@@ -1,3 +1,9 @@
 .intro__list-bold-font {
-  font-weight: bold;
+margin: 0;
+color: #FFFFFF;
+font-family: 'Inter', Arial, Helvetica, sans-serif;
+font-style:  normal;
+font-weight: 700;
+font-size: 12px;
+line-height: 1.5;
 }
