--- a/blocks/intro/__list/intro__list.css
+++ b/blocks/intro/__list/intro__list.css
@@ -1,13 +1,5 @@
 .intro__list {
-  max-width: 690px;
+  list-style-type: none;
   padding: 0;
   margin: 0;
-  margin-top: 32px;
-  list-style: none;
-  font-family: 'Inter', Arial, Helvetica, sans-serif;
-  font-style: normal;
-  font-weight: normal;
-  font-size: 12px;
-  line-height: 18px;
-  color: #FFFFFF;
 }
