--- a/blocks/intro/__title/intro__title.css
+++ b/blocks/intro/__title/intro__title.css
@@ -1,17 +1,16 @@
 .intro__title {
-  max-width: 690px;
   margin: 0;
   font-family: 'Inter', Arial, Helvetica, sans-serif;
   font-style: normal;
   font-weight: 900;
   font-size: 54px;
-  line-height: 58px;
+  line-height: 1.1;
   color: #FFFFFF;
 }
 
-@media screen and (max-width: 700px) {
+@media screen and (max-width: 767px) {
 .intro__title {
   font-size: 32px;
-  line-height: 35px;
+  line-height: 1.1;
   }
 }
