--- a/blocks/intro/intro.css
+++ b/blocks/intro/intro.css
@@ -1,27 +1,28 @@
 .intro {
-  max-width: 690px;
-  display: flex;
-  flex-direction: column;
-  justify-items: start;
-  margin: 92px auto 0;
+  margin: 92px auto 0 auto;
+  margin-top: 92px;
+  max-width: 985px;
 }
 
-@media screen and (max-width: 1250px) {
-.intro {
-  max-width: 928px;
+@media screen and (max-width: 1279px) {
+  .intro {
+    max-width: 928px;
+    padding: 0 48px;
   }
 }
 
-@media screen and (max-width: 1000px) {
-.intro {
-  max-width: 720px;
-  margin: 88px auto 0;
+@media screen and (max-width: 1023px) {
+  .intro {
+    max-width: 720px;
+    margin-top: 88px;
+    padding: 0 24px;
   }
 }
 
-@media screen and (max-width: 700px) {
-.intro {
-  max-width: 288px;
-  margin: 64px auto 0;
+@media screen and (max-width: 767px) {
+  .intro {
+    max-width: 288px;
+    margin-top: 64px;
+    padding: 0 16px;
   }
 }
