--- a/blocks/lead/__image/lead__image.css
+++ b/blocks/lead/__image/lead__image.css
@@ -3,8 +3,14 @@
   margin: 64px auto 0;
 }
 
-@media screen and (max-width: 768px) {
+@media screen and (max-width: 1279px) {
   .lead__image {
-    margin: 40px auto 0;
+    margin: 56px auto 0;
     }
+  }
+
+@media screen and (max-width: 767px) {
+.lead__image {
+  margin: 40px auto 0;
+  }
 }
