--- a/blocks/lead/__subtitle/lead__subtitle.css
+++ b/blocks/lead/__subtitle/lead__subtitle.css
@@ -4,16 +4,17 @@
   margin-top: 32px;
   font-family: 'Inter', Arial, Helvetica, sans-serif;
   font-style: normal;
-  font-weight: normal;
+  font-weight: 400;
   font-size: 30px;
-  line-height: 36px;
+  line-height: 1.2;
   text-align: center;
   color: #FFFFFF;
 }
 
-@media screen and (max-width: 700px) {
+@media screen and (max-width: 767px) {
 .lead__subtitle {
   font-size: 16px;
   line-height: 20px;
+  margin-top: 1.2;
   }
 }
