--- a/blocks/lead/__title/lead__title.css
+++ b/blocks/lead/__title/lead__title.css
@@ -5,7 +5,7 @@
   font-style: normal;
   font-weight: 900;
   font-size: 96px;
-  line-height: 100px;
+  line-height: 1.1;
   text-align: center;
   color: #FFFFFF;
 }
@@ -13,6 +13,6 @@
 @media screen and (max-width: 700px) {
 .lead__title {
   font-size: 40px;
-  line-height: 44px;
+  line-height: 1.1;
   }
 }
