--- a/blocks/place/__image/place__image.css
+++ b/blocks/place/__image/place__image.css
@@ -1,25 +1,27 @@
 .place__image {
+  margin: 0;
+  padding: 0;
   max-width: 460px;
-  grid-column: 1/2;
-  grid-row: 2/3;
-  align-self: start;
-  justify-self: start;
+  height: auto;
 }
 
-@media screen and (max-width: 1250px) {
+@media screen and (max-width: 1279px) {
 .place__image {
   max-width: 440px;
   }
 }
 
-@media screen and (max-width: 1000px) {
+@media screen and (max-width: 1023px) {
 .place__image {
   max-width: 340px;
   }
 }
 
-@media screen and (max-width: 760px) {
+@media screen and (max-width: 767px) {
 .place__image {
   max-width: 320px;
+  object-fit: cover;
+  margin-bottom: 32px;
+  width: 100%;
   }
 }
