--- a/blocks/place/__link/place__link.css
+++ b/blocks/place/__link/place__link.css
@@ -1,10 +1,16 @@
 .place__link {
-  max-width: 456px;
+  margin: 0;
+  padding: 0;
   font-family: 'Inter', Arial, Helvetica, sans-serif;
   font-style: normal;
-  font-weight: normal;
+  font-weight: 400;
   font-size: 18px;
-  line-height: 22px;
+  line-height: 1.2;
   text-decoration-line: underline;
   color: #FFFFFF;
+}
+
+.place__link:hover {
+  opacity: 0.8;
+  transition: opacity .5s linear;
 }
