--- a/blocks/place/__paragraph/place__paragraph.css
+++ b/blocks/place/__paragraph/place__paragraph.css
@@ -1,22 +1,36 @@
 .place__paragraph {
-  max-width: 484px;
-  margin: 0;
+  margin: 0 0 26px 0;
+  padding: 0;
   font-family: 'Inter', Arial, Helvetica, sans-serif;
   font-style: normal;
-  font-weight: normal;
+  font-weight: 400;
   font-size: 18px;
-  line-height: 30px;
+  line-height: 1.6;
   color: #FFFFFF;
-  margin-top: 24px;
 }
 
 .place__paragraph:first-child {
   margin-top: 0px;
 }
 
-@media screen and (max-width: 1024px) {
+@media screen and (max-width: 1279px) {
+  .place__paragraph {
+    margin: 0 0 27px 0;
+    }
+  }
+
+@media screen and (max-width: 1023px) {
 .place__paragraph {
   font-size: 16px;
-  line-height: 26px;
+  line-height: 1.6;
+  margin: 0 0 25px 0;
   }
 }
+
+@media screen and (max-width: 767px) {
+.place__paragraph {
+  margin-bottom: 25px;
+  padding-left: 16px;
+  max-width: 288px;
+  }
+  }
