--- a/blocks/place/__title/place__title.css
+++ b/blocks/place/__title/place__title.css
@@ -1,30 +1,28 @@
 .place__title {
-  max-width: 440px;
-  grid-column: 1/2;
-  grid-row: 1/2;
-  align-self: end;
-  justify-self: start;
   margin: 0;
+  padding: 0;
   font-family: 'Inter', Arial, Helvetica, sans-serif;
   font-style: normal;
   font-weight: 900;
   font-size: 72px;
-  line-height: 76px;
+  line-height: 1.1;
   color: #FFFFFF;
+  display: flex;
+  flex-direction: column;
 }
 
-@media screen and (max-width: 1000px) {
+@media screen and (max-width: 1023px) {
 .place__title {
   font-size: 42px;
-  line-height: 46px;
+  line-height: 1.1;
   }
 }
 
-@media screen and (max-width: 720px) {
+@media screen and (max-width: 767px) {
 .place__title {
-  font-size: 32px;
-  line-height: 35px;
   max-width: 288px;
-  margin-left: 16px;
+  font-size: 32px;
+  line-height: 1.1;
+  margin: 0 auto 32px 16px;
   }
 }
