--- a/blocks/place/__url-heading/place__url-heading.css
+++ b/blocks/place/__url-heading/place__url-heading.css
@@ -1,13 +1,11 @@
 .place__url-heading {
-  max-width: 456px;
-  margin: 0;
-  margin-bottom: 12px;
+  margin: 0 0 12px 0;
+  padding: 0;
   font-family: 'Inter', Arial, Helvetica, sans-serif;
   font-style: normal;
-  font-weight: normal;
+  font-weight: 400;
   font-size: 12px;
-  line-height: 12px;
-  letter-spacing: 0.2em;
-  text-transform: uppercase;
+  line-height: 1;
+  letter-spacing: 2px;
   color: #AAAAAA;
 }
