--- a/blocks/place/__website/place__website.css
+++ b/blocks/place/__website/place__website.css
@@ -1,12 +1,12 @@
 .place__website {
-  grid-column: 2/3;
-  grid-row: 1/2;
-  align-self: end;
-  justify-self: start;
+  margin: 0;
+  padding: 0;
+  align-self: flex-end;
 }
 
-@media screen and (max-width: 720px) {
-.place__website {
-  display: none;
+@media screen and (max-width: 767px) {
+  .place__website {
+    margin: 0 auto 32px 16px;
+    max-width: 288px;
   }
 }
