--- a/blocks/place/place.css
+++ b/blocks/place/place.css
@@ -1,38 +1,30 @@
 .place {
   display: grid;
-  grid-template-columns: repeat(2, minmax(min-content, max-content));
-  grid-template-rows: repeat(2, minmax(min-content, max-content));
+  grid-template-columns: repeat(2, 1fr);
+  grid-template-rows: auto;
   grid-gap: 48px 40px;
-  justify-items: center;
-  align-items: center;
-  margin-top: 80px;
+  margin: 0;
+  padding: 0;
 }
 
-.place:first-child {
-  margin-top: 0px;
-}
-
-@media screen and (max-width: 1250px) {
+@media screen and (max-width: 1279px) {
 .place {
   grid-gap: 48px 32px;
   }
 }
 
-@media screen and (max-width: 1000px) {
+@media screen and (max-width: 1023px) {
 .place {
   grid-gap: 48px 28px;
-  margin-top: 72px;
   }
 }
 
-@media screen and (max-width: 720px) {
-.place {
-  display: grid;
-  grid-template-columns: repeat(1, auto);
-  grid-template-rows: repeat(4, auto);
-  grid-gap: 32px;
-  justify-items: center;
-  align-items: center;
-  margin-top: 48px;
+@media screen and (max-width: 767px) {
+  .place {
+    display: flex;
+    flex-direction: column;
+    margin: 0 auto;
+    row-gap: 0;
+    margin-top: 50px;
   }
 }
