--- a/blocks/places/places.css
+++ b/blocks/places/places.css
@@ -1,24 +1,23 @@
 .places {
+  margin: 0 auto;
+  padding: 0;
   max-width: 984px;
-  margin: 92px auto 0;
 }
 
-@media screen and (max-width: 1100px) {
+@media screen and (max-width: 1279px) {
 .places {
   max-width: 928px;
   }
 }
 
-@media screen and (max-width: 930px) {
+@media screen and (max-width: 1023px) {
 .places {
   max-width: 720px;
-  margin: 88px auto 0;
   }
 }
 
-@media screen and (max-width: 720px) {
+@media screen and (max-width: 767px) {
 .places {
   max-width: 320px;
-  margin: 64px auto 0;
   }
 }
