--- a/blocks/cover/__overlay/cover__overlay.css
+++ b/blocks/cover/__overlay/cover__overlay.css
@@ -1,31 +1,50 @@
-.cover__overlay {
-  background-image: url(../../../images/cover-trains.jpg);
+.cover__overlay { 
+  background-image: url(../../../images/cover-trains.jpg); 
   background-size: cover;
-  position: relative;
-  max-width: 1184px;
-  padding-bottom: 62.5%;
-  max-height: 740px;
-  display: flex;
-  flex-direction: column;
-  align-items: center;
-  justify-content: center;
+  background-position: center;
+  background-repeat: no-repeat; 
+  position: relative; 
+  max-width: 1184px; 
+  min-height: 740px; 
+  display: flex; 
+  flex-direction: column; 
+  align-items: center; 
+  justify-content: center; 
   text-decoration: none;
-  
+  margin: 0 auto;
+} 
+
+.cover__overlay:before { 
+  left: 0; 
+  top: 0; 
+  right: 0; 
+  bottom: 0; 
+  content: ""; 
+  background: #2A2C2F; 
+  position: absolute; 
+  opacity: 0.3; 
+  transition: all 1s linear; 
+} 
+
+.cover__overlay:hover:before { 
+  background: #2A2C2F; 
+  opacity: 0.8; 
+} 
+
+@media screen and (max-width: 1024px) {
+  .cover__overlay {
+    min-height: 620px;
+  }
 }
-      
-.cover__overlay:before {
-  left: 0;
-  top: 0;
-  right: 0;
-  bottom: 0;
-  content: "";
-  background: #2A2C2F;
-  position: absolute;
-  opacity: 0.3;
-  transition: all 1s linear;
+
+@media screen and (max-width: 768px) {
+  .cover__overlay {
+    min-height: 480px;
+  }
 }
-      
-.cover__overlay:hover:before {
-  background: #2A2C2F;
-  opacity: 0.8;
+
+@media screen and (max-width: 767px) {
+  .cover__overlay {
+    min-height: 200px;
+  }
 }
