--- a/blocks/cover/__subtitle/cover__subtitle.css
+++ b/blocks/cover/__subtitle/cover__subtitle.css
@@ -7,19 +7,15 @@
   font-size: 18px;
   line-height: 1.2;
   text-align: center;
-  color: #FFFFFF;
-  position: absolute;
-  left: 50%;
-  top: 50%;
-  transform: translate(-50%, +40%);
+  color: #ffffff;
+  z-index: 1;
 }
 
 @media screen and (max-width: 767px) {
-.cover__subtitle {
-  min-width: 288px;
-  font-size: 14px;
-  line-height: 1.1;
-  margin: 16px auto 0;
-  transform: translate(-50%, -5%);
+  .cover__subtitle {
+    max-width: 288px;
+    font-size: 14px;
+    line-height: 1.1;
+    margin: 16px auto 0;
   }
 }
