--- a/pages/index.css
+++ b/pages/index.css
@@ -1,5 +1,7 @@
 @import url(../vendor/normalize.css);
 
+@import url(../fonts/inter.css);
+
 @import url(../blocks/body/body.css);
 
 @import url(../blocks/page/page.css);
